--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>First Commit</h1>
+    <div class="bg-img
+    "></div>
     <script src="script.js"></script>
   </body>
 </html>
